--- a/FabolousUI/Properties/launchSettings.json
+++ b/FabolousUI/Properties/launchSettings.json
@@ -1,21 +1,21 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:17092",
-      "sslPort": 44324
+      "applicationUrl": "http://localhost:65155/",
+      "sslPort": 44306
     }
   },
   "profiles": {
     "FabolousUI": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7074;http://localhost:5074",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:7074;http://localhost:5074",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
